--- a/Creport.ipynb
+++ b/Creport.ipynb
@@ -10,45 +10,39 @@
     "import pandas as pd\n",
     "\n",
     "# Load the Paste sheet and the mapping sheet\n",
-    "paste_df = pd.read_excel('Paste_file.xlsx', sheet_name='Paste')  # Your paste sheet\n",
-    "mapping_df = pd.read_excel('Mapping_file.xlsx')  # Your mapping sheet\n",
+    "paste_sheet_path = 'Paste_sheet.xlsx'  # Update with the actual file path\n",
+    "mapping_sheet_path = 'Mapping_sheet.xlsx'  # Update with the actual file path\n",
     "\n",
-    "# Create a dictionary to hold dataframes grouped by Function Code\n",
-    "rtn_data = {}\n",
+    "# Load the data\n",
+    "paste_df = pd.read_excel(paste_sheet_path)\n",
+    "mapping_df = pd.read_excel(mapping_sheet_path)\n",
     "\n",
-    "# Get the unique list of Function Codes\n",
-    "unique_function_codes = paste_df['Function'].unique()\n",
+    "# Step 1: Create a lookup dictionary from mapping sheet (RTN Level 4 -> File Name)\n",
+    "mapping_lookup = dict(zip(mapping_df['RTN Level 4'], mapping_df['File Name']))\n",
     "\n",
-    "# Create a dictionary where keys are Function Codes and values are dataframes with matching rows\n",
-    "for function_code in unique_function_codes:\n",
-    "    rtn_data[function_code] = paste_df[paste_df['Function'] == function_code]\n",
+    "# Step 2: Create a dictionary where keys are unique 'Function Code' values and values are dataframes\n",
+    "rtn_data = {func_code: paste_df[paste_df['Function Code'] == func_code] for func_code in paste_df['Function Code'].unique()}\n",
     "\n",
-    "# Iterate through each function code and add File Name based on RTN\n",
-    "for function_code, df in rtn_data.items():\n",
-    "    # Get the RTN values for the current function code\n",
-    "    rtn_values = df['RTN Level 4'].unique()\n",
+    "# Step 3: For each Function Code in rtn_data, find the matching RTN Level 4 and add the File Name column\n",
+    "for func_code, df in rtn_data.items():\n",
+    "    # Find matching RTN Level 4 in the mapping sheet\n",
+    "    matching_rtn_level = df['Function Code'].unique()[0]  # Assuming 'Function Code' == 'RTN Level 4'\n",
     "    \n",
-    "    # Match RTN from mapping_df with RTN in the current dataframe\n",
-    "    for rtn in rtn_values:\n",
-    "        # Fetch the corresponding File Name from the mapping sheet\n",
-    "        file_name = mapping_df.loc[mapping_df['RTN'] == rtn, 'File Name'].values\n",
-    "        \n",
-    "        # Check if there's a match for the RTN\n",
-    "        if len(file_name) > 0:\n",
-    "            # Add the File Name to all matching rows in the current dataframe\n",
-    "            df['File Name'] = file_name[0]\n",
-    "        else:\n",
-    "            # If no match, assign 'Unknown' or keep blank\n",
-    "            df['File Name'] = 'Unknown'\n",
+    "    # Get the corresponding file name from the mapping lookup\n",
+    "    file_name = mapping_lookup.get(matching_rtn_level, 'No Match')  # Default to 'No Match' if not found\n",
     "    \n",
-    "    # Replace the updated dataframe back into the dictionary\n",
-    "    rtn_data[function_code] = df\n",
+    "    # Step 4: Add the 'File Name' column to the dataframe\n",
+    "    df['File Name'] = file_name\n",
+    "    \n",
+    "    # Update the dictionary with the new dataframe\n",
+    "    rtn_data[func_code] = df\n",
     "\n",
-    "# Now concatenate all the dataframes in rtn_data back into a single dataframe\n",
-    "final_df = pd.concat(rtn_data.values(), ignore_index=True)\n",
+    "# Step 5: Concatenate all the dataframes back into one\n",
+    "final_df = pd.concat(rtn_data.values())\n",
     "\n",
-    "# Write the final dataframe back to the Paste sheet\n",
-    "final_df.to_excel('Final_Paste_file.xlsx', index=False)\n"
+    "# Write the updated dataframe back to a new Excel file\n",
+    "output_path = 'Updated_Paste_sheet.xlsx'\n",
+    "final_df.to_excel(output_path, index=False)\n"
    ]
   },
   {
