--- a/Creport.ipynb
+++ b/Creport.ipynb
@@ -17,31 +17,32 @@
     "paste_df = pd.read_excel(paste_sheet_path)\n",
     "mapping_df = pd.read_excel(mapping_sheet_path)\n",
     "\n",
-    "# Step 1: Create a lookup dictionary from mapping sheet (RTN Level 4 -> File Name)\n",
-    "mapping_lookup = dict(zip(mapping_df['RTN Level 4'], mapping_df['File Name']))\n",
+    "# Step 1: Create a lookup dictionary from mapping sheet (RTN Level 4 -> List of File Names)\n",
+    "mapping_lookup = mapping_df.groupby('RTN Level 4')['File Name'].apply(list).to_dict()\n",
     "\n",
     "# Step 2: Create a dictionary where keys are unique 'Function Code' values and values are dataframes\n",
     "rtn_data = {func_code: paste_df[paste_df['Function Code'] == func_code] for func_code in paste_df['Function Code'].unique()}\n",
     "\n",
-    "# Step 3: For each Function Code in rtn_data, find the matching RTN Level 4 and add the File Name column\n",
+    "# Step 3: For each Function Code in rtn_data, find the matching RTN Level 4 and duplicate rows for each File Name\n",
+    "result_dfs = []  # To store all the resulting dataframes\n",
     "for func_code, df in rtn_data.items():\n",
-    "    # Find matching RTN Level 4 in the mapping sheet\n",
+    "    # Find matching RTN Level 4 in the mapping lookup\n",
     "    matching_rtn_level = df['Function Code'].unique()[0]  # Assuming 'Function Code' == 'RTN Level 4'\n",
     "    \n",
-    "    # Get the corresponding file name from the mapping lookup\n",
-    "    file_name = mapping_lookup.get(matching_rtn_level, 'No Match')  # Default to 'No Match' if not found\n",
+    "    # Get the corresponding file names from the mapping lookup\n",
+    "    file_names = mapping_lookup.get(matching_rtn_level, ['No Match'])  # Default to 'No Match' if not found\n",
     "    \n",
-    "    # Step 4: Add the 'File Name' column to the dataframe\n",
-    "    df['File Name'] = file_name\n",
-    "    \n",
-    "    # Update the dictionary with the new dataframe\n",
-    "    rtn_data[func_code] = df\n",
+    "    # Step 4: Duplicate the dataframe for each file name and append to the result\n",
+    "    for file_name in file_names:\n",
+    "        df_copy = df.copy()  # Create a copy of the dataframe\n",
+    "        df_copy['File Name'] = file_name  # Add the 'File Name' column\n",
+    "        result_dfs.append(df_copy)  # Append the modified dataframe to the result list\n",
     "\n",
     "# Step 5: Concatenate all the dataframes back into one\n",
-    "final_df = pd.concat(rtn_data.values())\n",
+    "final_df = pd.concat(result_dfs, ignore_index=True)\n",
     "\n",
     "# Write the updated dataframe back to a new Excel file\n",
-    "output_path = 'Updated_Paste_sheet.xlsx'\n",
+    "output_path = 'Updated_Paste_sheet_with_filenames.xlsx'\n",
     "final_df.to_excel(output_path, index=False)\n"
    ]
   },
