--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -2,7 +2,83 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
+   "id": "68c852b9",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "xlUp",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-13-63f1aff1a00b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     32\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     33\u001b[0m \u001b[1;31m# Get the last row in column C by using Excel's xlUp constant\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 34\u001b[1;33m \u001b[0mlast_row\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msheet\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mCells\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msheet\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mRows\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mCount\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m3\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mEnd\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mwin32\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mconstants\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mxlUp\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mRow\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     35\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     36\u001b[0m \u001b[1;31m# Apply data validation for the Gender column (column C)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mC:\\Users\\Kirti\\anaconda3\\lib\\site-packages\\win32com\\client\\__init__.py\u001b[0m in \u001b[0;36m__getattr__\u001b[1;34m(self, a)\u001b[0m\n\u001b[0;32m    176\u001b[0m       \u001b[1;32mif\u001b[0m \u001b[0ma\u001b[0m \u001b[1;32min\u001b[0m \u001b[0md\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    177\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0md\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 178\u001b[1;33m     \u001b[1;32mraise\u001b[0m \u001b[0mAttributeError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    179\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    180\u001b[0m \u001b[1;31m# And create an instance.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: xlUp"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import win32com.client as win32\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Sample dataframe\n",
+    "data = {'Name': ['Alice', 'Bob', 'Charlie'],\n",
+    "        'Age': [24, 30, 22],\n",
+    "        'Gender': ['Female', 'Male', '']}\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# Save dataframe to Excel file with absolute path\n",
+    "excel_filename = 'sample_data.xlsx'\n",
+    "current_directory = os.getcwd()  # Get current working directory\n",
+    "excel_path = os.path.join(current_directory, excel_filename)  # Full path\n",
+    "\n",
+    "df.to_excel(excel_path, index=False)\n",
+    "\n",
+    "# Initialize Excel application using win32com\n",
+    "excel = win32.Dispatch('Excel.Application')\n",
+    "excel.Visible = True  # Make Excel visible for debugging\n",
+    "\n",
+    "# Open the workbook with the full path\n",
+    "workbook = excel.Workbooks.Open(excel_path)\n",
+    "sheet = workbook.Worksheets(1)  # Select the first sheet\n",
+    "\n",
+    "# Define the list of allowed values for the drop-down\n",
+    "drop_down_list = 'Male,Female,Other'\n",
+    "\n",
+    "# Define the range for the \"Gender\" column (assuming Gender is in column C)\n",
+    "start_row = 2  # Assuming your data starts at row 2 (after the header)\n",
+    "\n",
+    "# Get the last row in column C by using Excel's xlUp constant\n",
+    "last_row = sheet.Cells(sheet.Rows.Count, 3).End(win32.constants.xlUp).Row\n",
+    "\n",
+    "# Apply data validation for the Gender column (column C)\n",
+    "gender_range = sheet.Range(f\"C{start_row}:C{last_row}\")\n",
+    "validation = gender_range.Validation\n",
+    "validation.Delete()  # Delete any existing validation\n",
+    "validation.Add(Type=win32.constants.xlValidateList,\n",
+    "               AlertStyle=win32.constants.xlValidAlertStop,\n",
+    "               Operator=win32.constants.xlBetween,\n",
+    "               Formula1=drop_down_list)\n",
+    "validation.InCellDropdown = True  # Ensure the drop-down arrow is visible\n",
+    "\n",
+    "# Save the workbook with the applied drop-down\n",
+    "output_path = os.path.join(current_directory, 'output_with_win32com_dropdown.xlsx')\n",
+    "workbook.SaveAs(output_path)\n",
+    "\n",
+    "# Cleanup: close the workbook and quit Excel\n",
+    "workbook.Close(SaveChanges=True)\n",
+    "excel.Quit()\n",
+    "\n",
+    "print(\"Drop-down list applied and file saved successfully.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "541cec9f",
    "metadata": {},
    "outputs": [
@@ -10,67 +86,62 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   Business Framework Country R3  GCB\n",
-      "0          Global CMB         UK  0-1\n",
-      "1          Global CMB         UK    2\n",
-      "2          Global CMB         UK    3\n",
-      "3          Global CMB         UK    4\n",
-      "4          Global CMB         UK    5\n",
-      "5          Global CMB         UK    6\n",
-      "6          Global CMB         UK    7\n",
-      "7          Global CMB         UK    8\n",
-      "8     Other Framework         US  0-1\n",
-      "9     Other Framework         US    2\n",
-      "10    Other Framework         US    3\n",
-      "11    Other Framework         US    4\n",
-      "12    Other Framework         US    5\n",
-      "13    Other Framework         US    6\n",
-      "14    Other Framework         US    7\n",
-      "15    Other Framework         US    8\n"
+      "Excel file saved with a drop-down in the 'Gender' column for all rows.\n"
      ]
     }
    ],
    "source": [
     "import pandas as pd\n",
+    "from openpyxl import Workbook\n",
+    "from openpyxl.utils.dataframe import dataframe_to_rows\n",
+    "from openpyxl.worksheet.datavalidation import DataValidation\n",
     "\n",
-    "# Sample DataFrame to simulate the input\n",
-    "data = {\n",
-    "    'Business Framework': ['Global CMB', 'Other Framework'],  # Sample values\n",
-    "    'Country R3': ['UK', 'US'],  # Sample values\n",
-    "}\n",
+    "# Sample dataframe\n",
+    "data = {'Name': ['Alice', 'Bob', 'Charlie'],\n",
+    "        'Age': [24, 30, 22],\n",
+    "        'Gender': ['Female', 'Male', '']}  # Leave empty so users can select from the dropdown\n",
     "\n",
-    "# Create a DataFrame from the sample data\n",
     "df = pd.DataFrame(data)\n",
     "\n",
-    "# Prepare an empty list to collect the expanded rows\n",
-    "expanded_rows = []\n",
+    "# Create a workbook and add the dataframe to the sheet\n",
+    "wb = Workbook()\n",
+    "ws = wb.active\n",
     "\n",
-    "# Loop through each row in the original DataFrame\n",
-    "for index, row in df.iterrows():\n",
-    "    # For the first repetition, add \"0-1\" as the GCB value\n",
-    "    expanded_rows.append({\n",
-    "        'Business Framework': row['Business Framework'],\n",
-    "        'Country R3': row['Country R3'],\n",
-    "        'GCB': '0-1'\n",
-    "    })\n",
+    "# Write the DataFrame to the worksheet\n",
+    "for r_idx, row in enumerate(dataframe_to_rows(df, index=False, header=True), 1):\n",
+    "    ws.append(row)\n",
     "\n",
-    "    # For the subsequent rows, add GCB values from 2 to 8\n",
-    "    for gcb_value in range(2, 9):  # Values from 2 to 8\n",
-    "        expanded_rows.append({\n",
-    "            'Business Framework': row['Business Framework'],\n",
-    "            'Country R3': row['Country R3'],\n",
-    "            'GCB': gcb_value\n",
-    "        })\n",
+    "# Define the list of allowed values for the drop-down\n",
+    "drop_down_list = ['Male', 'Female', 'Other']\n",
     "\n",
-    "# Create a new DataFrame from the expanded rows\n",
-    "expanded_df = pd.DataFrame(expanded_rows)\n",
+    "# Create a DataValidation object for the drop-down list\n",
+    "dv = DataValidation(type=\"list\", formula1=f'\"{\",\".join(drop_down_list)}\"', showDropDown=True)\n",
     "\n",
-    "# Save the final DataFrame to a new Excel file or CSV if needed\n",
-    "# expanded_df.to_excel('expanded_output.xlsx', index=False)\n",
+    "# Optional: Add an input prompt when the user selects the cell\n",
+    "dv.prompt = \"Select Gender from the list\"\n",
+    "dv.promptTitle = \"Gender Selection\"\n",
     "\n",
-    "# Print the expanded DataFrame\n",
-    "print(expanded_df)\n"
+    "# Apply the data validation to the \"Gender\" column (assuming it's column C)\n",
+    "ws.add_data_validation(dv)\n",
+    "\n",
+    "# Extend the drop-down for all rows in the \"Gender\" column (starting from C2)\n",
+    "max_row = len(df) + 100  # Adjust the number of rows if needed\n",
+    "dv.add(f\"C2:C{max_row}\")  # Apply the drop-down from C2 to C{max_row}\n",
+    "\n",
+    "# Save the workbook\n",
+    "output_path = 'output_with_dropdown_visible.xlsx'\n",
+    "wb.save(output_path)\n",
+    "\n",
+    "print(f\"Excel file saved with a drop-down in the 'Gender' column for all rows.\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7b4c3e39",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
