--- a/MasterFile.ipynb
+++ b/MasterFile.ipynb
@@ -2,70 +2,83 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "b0ad55b0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  Position ID Employee ID  Jan 24  Feb 24  Mar 24\n",
+      "0      000123        E001       1       1       0\n",
+      "1      000456        E002       1       0       0\n",
+      "2      000789        E003       0       0       1\n"
+     ]
+    }
+   ],
    "source": [
-    "import pandas as pd\n",
+    "# Initialize an empty DataFrame to track changes in Position ID and Employee ID combinations\n",
+    "changes_df = pd.DataFrame(columns=master_df.columns)\n",
     "\n",
-    "# Load initial master file (September data) with columns like 'Jan 24', 'Feb 24', ..., 'Dec 24'\n",
-    "master_df = pd.read_csv('master_sep.csv')\n",
-    "master_df['Source'] = master_df['Source'].str.strip()\n",
-    "\n",
-    "# Define months and MoM columns\n",
-    "months = [\"Jan 24\", \"Feb 24\", \"Mar 24\", \"Apr 24\", \"May 24\", \"Jun 24\", \"Jul 24\", \"Aug 24\", \"Sep 24\", \"Oct 24\", \"Nov 24\", \"Dec 24\"]\n",
-    "\n",
-    "# Ensure MoM columns are present in master file, filled with 0 by default\n",
-    "for month in months:\n",
-    "    if month not in master_df.columns:\n",
-    "        master_df[month] = 0\n",
-    "\n",
-    "# Function to update MoM for each month\n",
-    "def update_mom(master_df, month, gha_file, open_pos_file):\n",
-    "    # Load monthly GHA and Open Position data\n",
-    "    gha_df = pd.read_csv(gha_file)\n",
-    "    open_pos_df = pd.read_csv(open_pos_file)\n",
+    "# Loop through each month’s GHA and Open Position files\n",
+    "for month, gha_file, open_pos_file in zip(month_columns, gha_files, open_pos_files):\n",
     "    \n",
-    "    # Update 'GHA' source MoM\n",
-    "    gha_ids = set(gha_df['Pos ID'])\n",
-    "    master_df.loc[(master_df['Source'] == 'GHA') & (master_df['Pos ID'].isin(gha_ids)), month] = 1\n",
-    "\n",
-    "    # Update 'Open Position' source MoM\n",
-    "    open_pos_ids = set(open_pos_df['Pos ID'])\n",
-    "    master_df.loc[(master_df['Source'] == 'Open Position') & (master_df['Pos ID'].isin(open_pos_ids)), month] = 1\n",
+    "    # Process GHA data\n",
+    "    gha_month_df = pd.read_csv(gha_file)\n",
+    "    gha_month_df['Position ID'] = gha_month_df['Position ID'].astype(str).str.zfill(max_digits)\n",
+    "    gha_month_df['Source'] = 'GHA'\n",
     "    \n",
-    "    # Identify and add new GHA records to master\n",
-    "    new_gha_ids = gha_ids - set(master_df.loc[master_df['Source'] == 'GHA', 'Pos ID'])\n",
-    "    new_gha_rows = gha_df[gha_df['Pos ID'].isin(new_gha_ids)].copy()\n",
-    "    new_gha_rows['Source'] = 'GHA'\n",
-    "    for m in months:\n",
-    "        new_gha_rows[m] = 1 if m == month else 0\n",
-    "    master_df = pd.concat([master_df, new_gha_rows], ignore_index=True)\n",
+    "    # Merge with master to identify changes or new combinations\n",
+    "    gha_changes = gha_month_df.merge(\n",
+    "        master_df[['Position ID', 'Employee ID']], \n",
+    "        on='Position ID', \n",
+    "        how='left', \n",
+    "        suffixes=('', '_master')\n",
+    "    )\n",
     "    \n",
-    "    # Identify and add new Open Position records to master\n",
-    "    new_open_pos_ids = open_pos_ids - set(master_df.loc[master_df['Source'] == 'Open Position', 'Pos ID'])\n",
-    "    new_open_pos_rows = open_pos_df[open_pos_df['Pos ID'].isin(new_open_pos_ids)].copy()\n",
-    "    new_open_pos_rows['Source'] = 'Open Position'\n",
-    "    for m in months:\n",
-    "        new_open_pos_rows[m] = 1 if m == month else 0\n",
-    "    master_df = pd.concat([master_df, new_open_pos_rows], ignore_index=True)\n",
+    "    # Identify changes: cases where Employee ID differs or is new\n",
+    "    gha_changes = gha_changes[\n",
+    "        (gha_changes['Employee ID_master'] != gha_changes['Employee ID']) | \n",
+    "        (gha_changes['Employee ID_master'].isnull())\n",
+    "    ]\n",
     "    \n",
-    "    return master_df\n",
+    "    # Append these records to changes_df\n",
+    "    changes_df = pd.concat([changes_df, gha_changes], ignore_index=True)\n",
+    "    \n",
+    "    # Repeat for Open Position data\n",
+    "    open_pos_month_df = pd.read_csv(open_pos_file)\n",
+    "    open_pos_month_df['Position ID'] = open_pos_month_df['Position ID'].astype(str).str.zfill(max_digits)\n",
+    "    open_pos_month_df['Source'] = 'Open Position'\n",
+    "    \n",
+    "    # Merge with master to identify changes or new combinations\n",
+    "    open_pos_changes = open_pos_month_df.merge(\n",
+    "        master_df[['Position ID', 'Employee ID']], \n",
+    "        on='Position ID', \n",
+    "        how='left', \n",
+    "        suffixes=('', '_master')\n",
+    "    )\n",
+    "    \n",
+    "    # Identify changes: cases where Employee ID differs or is new\n",
+    "    open_pos_changes = open_pos_changes[\n",
+    "        (open_pos_changes['Employee ID_master'] != open_pos_changes['Employee ID']) | \n",
+    "        (open_pos_changes['Employee ID_master'].isnull())\n",
+    "    ]\n",
+    "    \n",
+    "    # Append these records to changes_df\n",
+    "    changes_df = pd.concat([changes_df, open_pos_changes], ignore_index=True)\n",
     "\n",
-    "# Update master_df with each month\n",
-    "monthly_files = {\n",
-    "    \"Jan 24\": (\"gha_jan.csv\", \"open_pos_jan.csv\"),\n",
-    "    \"Feb 24\": (\"gha_feb.csv\", \"open_pos_feb.csv\"),\n",
-    "    # Add entries for all months up to the current month\n",
-    "}\n",
-    "\n",
-    "for month, (gha_file, open_pos_file) in monthly_files.items():\n",
-    "    master_df = update_mom(master_df, month, gha_file, open_pos_file)\n",
-    "\n",
-    "# Save the updated master file\n",
-    "master_df.to_csv(\"updated_master_file.csv\", index=False)\n"
+    "# The changes_df now contains all new or changed Position ID and Employee ID combinations\n",
+    "# You can now review or save changes_df as required\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0e9090b5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
