--- a/MasterFile.ipynb
+++ b/MasterFile.ipynb
@@ -18,64 +18,50 @@
     }
    ],
    "source": [
-    "# Initialize an empty DataFrame to track changes in Position ID and Employee ID combinations\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Initialize an empty DataFrame to collect changes\n",
     "changes_df = pd.DataFrame(columns=master_df.columns)\n",
     "\n",
-    "# Loop through each month’s GHA and Open Position files\n",
-    "for month, gha_file, open_pos_file in zip(month_columns, gha_files, open_pos_files):\n",
-    "    \n",
-    "    # Process GHA data\n",
+    "# Loop over each month's GHA file\n",
+    "for gha_file in gha_files:\n",
+    "    # Load the GHA data\n",
     "    gha_month_df = pd.read_csv(gha_file)\n",
-    "    gha_month_df['Position ID'] = gha_month_df['Position ID'].astype(str).str.zfill(max_digits)\n",
-    "    gha_month_df['Source'] = 'GHA'\n",
     "    \n",
-    "    # Merge with master to identify changes or new combinations\n",
-    "    gha_changes = gha_month_df.merge(\n",
-    "        master_df[['Position ID', 'Employee ID']], \n",
-    "        on='Position ID', \n",
-    "        how='left', \n",
-    "        suffixes=('', '_master')\n",
-    "    )\n",
+    "    # Ensure consistent column names in both DataFrames\n",
+    "    gha_month_df = gha_month_df.rename(columns={'Position Number': 'Position ID', 'Employee ID': 'Employee ID_gha'})\n",
     "    \n",
-    "    # Identify changes: cases where Employee ID differs or is new\n",
-    "    gha_changes = gha_changes[\n",
-    "        (gha_changes['Employee ID_master'] != gha_changes['Employee ID']) | \n",
-    "        (gha_changes['Employee ID_master'].isnull())\n",
-    "    ]\n",
+    "    # Merge master with current month's GHA data on 'Position ID' and 'Employee ID'\n",
+    "    merged_df = master_df.merge(gha_month_df[['Position ID', 'Employee ID_gha']], \n",
+    "                                on='Position ID', \n",
+    "                                how='left', \n",
+    "                                indicator=True)\n",
     "    \n",
-    "    # Append these records to changes_df\n",
-    "    changes_df = pd.concat([changes_df, gha_changes], ignore_index=True)\n",
+    "    # Find rows where 'Employee ID' from GHA is different or new\n",
+    "    new_or_changed = merged_df[(merged_df['_merge'] == 'right_only') | \n",
+    "                               (merged_df['Employee ID'] != merged_df['Employee ID_gha'])]\n",
     "    \n",
-    "    # Repeat for Open Position data\n",
-    "    open_pos_month_df = pd.read_csv(open_pos_file)\n",
-    "    open_pos_month_df['Position ID'] = open_pos_month_df['Position ID'].astype(str).str.zfill(max_digits)\n",
-    "    open_pos_month_df['Source'] = 'Open Position'\n",
-    "    \n",
-    "    # Merge with master to identify changes or new combinations\n",
-    "    open_pos_changes = open_pos_month_df.merge(\n",
-    "        master_df[['Position ID', 'Employee ID']], \n",
-    "        on='Position ID', \n",
-    "        how='left', \n",
-    "        suffixes=('', '_master')\n",
-    "    )\n",
-    "    \n",
-    "    # Identify changes: cases where Employee ID differs or is new\n",
-    "    open_pos_changes = open_pos_changes[\n",
-    "        (open_pos_changes['Employee ID_master'] != open_pos_changes['Employee ID']) | \n",
-    "        (open_pos_changes['Employee ID_master'].isnull())\n",
-    "    ]\n",
-    "    \n",
-    "    # Append these records to changes_df\n",
-    "    changes_df = pd.concat([changes_df, open_pos_changes], ignore_index=True)\n",
+    "    # Append new or changed rows to changes_df\n",
+    "    changes_df = pd.concat([changes_df, new_or_changed], ignore_index=True)\n",
     "\n",
-    "# The changes_df now contains all new or changed Position ID and Employee ID combinations\n",
-    "# You can now review or save changes_df as required\n"
+    "# Drop '_merge' column if present\n",
+    "if '_merge' in changes_df.columns:\n",
+    "    changes_df = changes_df.drop(columns='_merge')\n",
+    "\n",
+    "# Append changes_df to master_df\n",
+    "master_df = pd.concat([master_df, changes_df], ignore_index=True)\n",
+    "\n",
+    "# Ensure all columns are synchronized between master_df and changes_df\n",
+    "master_df = master_df[changes_df.columns]\n",
+    "\n",
+    "# Save or print final result\n",
+    "print(master_df)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e9090b5",
+   "id": "62b2dce8",
    "metadata": {},
    "outputs": [],
    "source": []
