--- a/MasterFile.ipynb
+++ b/MasterFile.ipynb
@@ -18,50 +18,52 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
+    "# Initialize an additional dictionary to track last known mappings of Employee ID to Position ID\n",
+    "employee_position_map = {}\n",
     "\n",
-    "# Initialize an empty DataFrame to collect changes\n",
-    "changes_df = pd.DataFrame(columns=master_df.columns)\n",
-    "\n",
-    "# Loop over each month's GHA file\n",
-    "for gha_file in gha_files:\n",
-    "    # Load the GHA data\n",
+    "# Loop through each month's GHA data file\n",
+    "for month, gha_file in gha_files.items():\n",
+    "    # Load the GHA data for the current month\n",
     "    gha_month_df = pd.read_csv(gha_file)\n",
-    "    \n",
-    "    # Ensure consistent column names in both DataFrames\n",
     "    gha_month_df = gha_month_df.rename(columns={'Position Number': 'Position ID', 'Employee ID': 'Employee ID_gha'})\n",
-    "    \n",
-    "    # Merge master with current month's GHA data on 'Position ID' and 'Employee ID'\n",
-    "    merged_df = master_df.merge(gha_month_df[['Position ID', 'Employee ID_gha']], \n",
-    "                                on='Position ID', \n",
-    "                                how='left', \n",
-    "                                indicator=True)\n",
-    "    \n",
-    "    # Find rows where 'Employee ID' from GHA is different or new\n",
-    "    new_or_changed = merged_df[(merged_df['_merge'] == 'right_only') | \n",
-    "                               (merged_df['Employee ID'] != merged_df['Employee ID_gha'])]\n",
-    "    \n",
-    "    # Append new or changed rows to changes_df\n",
-    "    changes_df = pd.concat([changes_df, new_or_changed], ignore_index=True)\n",
     "\n",
-    "# Drop '_merge' column if present\n",
-    "if '_merge' in changes_df.columns:\n",
-    "    changes_df = changes_df.drop(columns='_merge')\n",
+    "    # Iterate over each row in the current month's GHA data\n",
+    "    for _, row in gha_month_df.iterrows():\n",
+    "        pos_id = row['Position ID']\n",
+    "        emp_id = row['Employee ID_gha']\n",
+    "        \n",
+    "        # Check for changes in Position ID -> Employee ID mapping\n",
+    "        if pos_id in position_employee_map:\n",
+    "            if position_employee_map[pos_id] != emp_id:\n",
+    "                change_record = master_df[master_df['Position ID'] == pos_id].copy()\n",
+    "                change_record['Change Month'] = month\n",
+    "                changes_df = pd.concat([changes_df, change_record], ignore_index=True)\n",
+    "                position_employee_map[pos_id] = emp_id\n",
+    "        else:\n",
+    "            position_employee_map[pos_id] = emp_id\n",
     "\n",
-    "# Append changes_df to master_df\n",
-    "master_df = pd.concat([master_df, changes_df], ignore_index=True)\n",
+    "        # Check for changes in Employee ID -> Position ID mapping\n",
+    "        if emp_id in employee_position_map:\n",
+    "            if employee_position_map[emp_id] != pos_id:\n",
+    "                change_record = master_df[master_df['Employee ID'] == emp_id].copy()\n",
+    "                change_record['Change Month'] = month\n",
+    "                changes_df = pd.concat([changes_df, change_record], ignore_index=True)\n",
+    "                employee_position_map[emp_id] = pos_id\n",
+    "        else:\n",
+    "            employee_position_map[emp_id] = pos_id\n",
     "\n",
-    "# Ensure all columns are synchronized between master_df and changes_df\n",
-    "master_df = master_df[changes_df.columns]\n",
+    "# Remove duplicate changes based on Position ID and Employee ID combinations\n",
+    "changes_df = changes_df.drop_duplicates(subset=['Position ID', 'Employee ID_gha'])\n",
     "\n",
-    "# Save or print final result\n",
-    "print(master_df)\n"
+    "# View the final DataFrame with captured changes\n",
+    "print(\"Changes DataFrame:\")\n",
+    "print(changes_df)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62b2dce8",
+   "id": "b66b4302",
    "metadata": {},
    "outputs": [],
    "source": []
