--- a/MasterFile.ipynb
+++ b/MasterFile.ipynb
@@ -18,52 +18,75 @@
     }
    ],
    "source": [
-    "# Initialize an additional dictionary to track last known mappings of Employee ID to Position ID\n",
-    "employee_position_map = {}\n",
+    "import pandas as pd\n",
     "\n",
-    "# Loop through each month's GHA data file\n",
-    "for month, gha_file in gha_files.items():\n",
+    "# Initialize an empty DataFrame to capture changes\n",
+    "changes_df = pd.DataFrame()\n",
+    "\n",
+    "# Initialize dictionaries to track the last known mappings\n",
+    "position_employee_map = {}  # Tracks last known Employee ID for each Position ID\n",
+    "additional_cols_map = {}    # Tracks last known values for additional columns per Position ID\n",
+    "\n",
+    "# Columns to check for changes\n",
+    "additional_columns = ['Global Career Band', 'BF Level 4 Name', 'Work Location Country/Territory Name']\n",
+    "\n",
+    "# Loop through each month and the corresponding GHA file\n",
+    "for month, gha_file in zip(months, gha_files):\n",
     "    # Load the GHA data for the current month\n",
-    "    gha_month_df = pd.read_csv(gha_file)\n",
+    "    gha_month_df = pd.read_excel(gha_file, engine='openpyxl')\n",
     "    gha_month_df = gha_month_df.rename(columns={'Position Number': 'Position ID', 'Employee ID': 'Employee ID_gha'})\n",
-    "\n",
+    "    \n",
     "    # Iterate over each row in the current month's GHA data\n",
     "    for _, row in gha_month_df.iterrows():\n",
     "        pos_id = row['Position ID']\n",
     "        emp_id = row['Employee ID_gha']\n",
     "        \n",
+    "        # Track if any change was detected for this row\n",
+    "        changes_detected = False\n",
+    "        description_list = []\n",
+    "        \n",
     "        # Check for changes in Position ID -> Employee ID mapping\n",
     "        if pos_id in position_employee_map:\n",
     "            if position_employee_map[pos_id] != emp_id:\n",
-    "                change_record = master_df[master_df['Position ID'] == pos_id].copy()\n",
-    "                change_record['Change Month'] = month\n",
-    "                changes_df = pd.concat([changes_df, change_record], ignore_index=True)\n",
-    "                position_employee_map[pos_id] = emp_id\n",
+    "                changes_detected = True\n",
+    "                description_list.append('Employee ID Changed')\n",
+    "                position_employee_map[pos_id] = emp_id  # Update the map with the new Employee ID\n",
     "        else:\n",
+    "            # Add the initial Position ID -> Employee ID mapping\n",
     "            position_employee_map[pos_id] = emp_id\n",
     "\n",
-    "        # Check for changes in Employee ID -> Position ID mapping\n",
-    "        if emp_id in employee_position_map:\n",
-    "            if employee_position_map[emp_id] != pos_id:\n",
-    "                change_record = master_df[master_df['Employee ID'] == emp_id].copy()\n",
-    "                change_record['Change Month'] = month\n",
-    "                changes_df = pd.concat([changes_df, change_record], ignore_index=True)\n",
-    "                employee_position_map[emp_id] = pos_id\n",
-    "        else:\n",
-    "            employee_position_map[emp_id] = pos_id\n",
+    "        # Check for changes in additional columns\n",
+    "        for col in additional_columns:\n",
+    "            current_value = row[col]\n",
+    "            if pos_id in additional_cols_map:\n",
+    "                if additional_cols_map[pos_id][col] != current_value:\n",
+    "                    changes_detected = True\n",
+    "                    description_list.append(f\"{col} Changed\")\n",
+    "                    additional_cols_map[pos_id][col] = current_value  # Update the map with the new column value\n",
+    "            else:\n",
+    "                # Initialize map for additional columns if not already present\n",
+    "                additional_cols_map[pos_id] = {col: current_value}\n",
     "\n",
-    "# Remove duplicate changes based on Position ID and Employee ID combinations\n",
-    "changes_df = changes_df.drop_duplicates(subset=['Position ID', 'Employee ID_gha'])\n",
+    "        # If changes were detected, append this row to changes_df\n",
+    "        if changes_detected:\n",
+    "            change_record = gha_month_df[gha_month_df['Position ID'] == pos_id].copy()\n",
+    "            change_record['Change Month'] = month\n",
+    "            change_record['Description'] = ', '.join(description_list)\n",
+    "            changes_df = pd.concat([changes_df, change_record], ignore_index=True)\n",
     "\n",
-    "# View the final DataFrame with captured changes\n",
+    "# Select only the columns present in the master DataFrame, excluding MoM data and adding \"Change Month\" and \"Description\"\n",
+    "master_columns = [col for col in master_df.columns if col not in month_columns]\n",
+    "final_changes_df = changes_df[master_columns + ['Change Month', 'Description']]\n",
+    "\n",
+    "# Display the resulting DataFrame with captured changes\n",
     "print(\"Changes DataFrame:\")\n",
-    "print(changes_df)\n"
+    "print(final_changes_df)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b66b4302",
+   "id": "bc228ded",
    "metadata": {},
    "outputs": [],
    "source": []
