--- a/MasterFile.ipynb
+++ b/MasterFile.ipynb
@@ -20,73 +20,79 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "# Initialize an empty DataFrame to capture changes\n",
-    "changes_df = pd.DataFrame()\n",
+    "# Sample structure of your files list and month labels\n",
+    "gha_files = [gha_jan_df, gha_feb_df, gha_mar_df]  # Replace with actual dataframes\n",
+    "open_files = [open_jan_df, open_feb_df, open_mar_df]  # Replace with actual dataframes\n",
+    "months = [\"Jan 24\", \"Feb 24\", \"Mar 24\"]  # Replace with actual month names\n",
     "\n",
-    "# Initialize dictionaries to track the last known mappings\n",
-    "position_employee_map = {}  # Tracks last known Employee ID for each Position ID\n",
-    "additional_cols_map = {}    # Tracks last known values for additional columns per Position ID\n",
-    "\n",
-    "# Columns to check for changes\n",
+    "# Define additional columns to check for changes\n",
     "additional_columns = ['Global Career Band', 'BF Level 4 Name', 'Work Location Country/Territory Name']\n",
     "\n",
-    "# Loop through each month and the corresponding GHA file\n",
-    "for month, gha_file in zip(months, gha_files):\n",
-    "    # Load the GHA data for the current month\n",
-    "    gha_month_df = pd.read_excel(gha_file, engine='openpyxl')\n",
-    "    gha_month_df = gha_month_df.rename(columns={'Position Number': 'Position ID', 'Employee ID': 'Employee ID_gha'})\n",
-    "    \n",
-    "    # Iterate over each row in the current month's GHA data\n",
-    "    for _, row in gha_month_df.iterrows():\n",
-    "        pos_id = row['Position ID']\n",
-    "        emp_id = row['Employee ID_gha']\n",
-    "        \n",
-    "        # Track if any change was detected for this row\n",
-    "        changes_detected = False\n",
-    "        description_list = []\n",
-    "        \n",
-    "        # Check for changes in Position ID -> Employee ID mapping\n",
-    "        if pos_id in position_employee_map:\n",
-    "            if position_employee_map[pos_id] != emp_id:\n",
-    "                changes_detected = True\n",
-    "                description_list.append('Employee ID Changed')\n",
-    "                position_employee_map[pos_id] = emp_id  # Update the map with the new Employee ID\n",
-    "        else:\n",
-    "            # Add the initial Position ID -> Employee ID mapping\n",
-    "            position_employee_map[pos_id] = emp_id\n",
+    "# Initialize the master additional_cols_map to track Position ID and associated columns\n",
+    "additional_cols_map = {}  # Dictionary to store the last known state of additional columns for each Position ID\n",
     "\n",
-    "        # Check for changes in additional columns\n",
-    "        for col in additional_columns:\n",
-    "            current_value = row[col]\n",
-    "            if pos_id in additional_cols_map:\n",
+    "# DataFrame to store all changes\n",
+    "changes_df = pd.DataFrame(columns=[\n",
+    "    'Position ID', 'Employee ID', 'Month', 'Description'] + additional_columns\n",
+    ")\n",
+    "\n",
+    "# Iterate over each month's file and check for changes\n",
+    "for month, gha_df, open_df in zip(months, gha_files, open_files):\n",
+    "    for df, source in [(gha_df, 'GHA'), (open_df, 'Open Position')]:        \n",
+    "        # Skip if 'Open Position' as it lacks 'Employee ID'\n",
+    "        if source == 'Open Position':\n",
+    "            continue\n",
+    "            \n",
+    "        # Iterate over each row to detect changes\n",
+    "        for _, row in df.iterrows():\n",
+    "            pos_id = row['Position ID']\n",
+    "            emp_id = row['Employee ID']\n",
+    "            \n",
+    "            # Initialize map entry if not exists\n",
+    "            if pos_id not in additional_cols_map:\n",
+    "                additional_cols_map[pos_id] = {\n",
+    "                    'Employee ID': emp_id,\n",
+    "                    **{col: row[col] for col in additional_columns}\n",
+    "                }\n",
+    "                \n",
+    "            # Detect any change in Employee ID or additional columns\n",
+    "            changes_detected = False\n",
+    "            description_list = []\n",
+    "\n",
+    "            # Check for Employee ID change\n",
+    "            if additional_cols_map[pos_id]['Employee ID'] != emp_id:\n",
+    "                changes_detected = True\n",
+    "                description_list.append(\"Employee ID Changed\")\n",
+    "                additional_cols_map[pos_id]['Employee ID'] = emp_id\n",
+    "\n",
+    "            # Check for changes in additional columns\n",
+    "            for col in additional_columns:\n",
+    "                current_value = row[col]\n",
     "                if additional_cols_map[pos_id][col] != current_value:\n",
     "                    changes_detected = True\n",
     "                    description_list.append(f\"{col} Changed\")\n",
-    "                    additional_cols_map[pos_id][col] = current_value  # Update the map with the new column value\n",
-    "            else:\n",
-    "                # Initialize map for additional columns if not already present\n",
-    "                additional_cols_map[pos_id] = {col: current_value}\n",
+    "                    additional_cols_map[pos_id][col] = current_value\n",
     "\n",
-    "        # If changes were detected, append this row to changes_df\n",
-    "        if changes_detected:\n",
-    "            change_record = gha_month_df[gha_month_df['Position ID'] == pos_id].copy()\n",
-    "            change_record['Change Month'] = month\n",
-    "            change_record['Description'] = ', '.join(description_list)\n",
-    "            changes_df = pd.concat([changes_df, change_record], ignore_index=True)\n",
+    "            # If any changes are detected, add to changes_df\n",
+    "            if changes_detected:\n",
+    "                change_entry = {\n",
+    "                    'Position ID': pos_id,\n",
+    "                    'Employee ID': emp_id,\n",
+    "                    'Month': month,\n",
+    "                    'Description': \"; \".join(description_list)\n",
+    "                }\n",
+    "                for col in additional_columns:\n",
+    "                    change_entry[col] = row[col]\n",
+    "                changes_df = pd.concat([changes_df, pd.DataFrame([change_entry])], ignore_index=True)\n",
     "\n",
-    "# Select only the columns present in the master DataFrame, excluding MoM data and adding \"Change Month\" and \"Description\"\n",
-    "master_columns = [col for col in master_df.columns if col not in month_columns]\n",
-    "final_changes_df = changes_df[master_columns + ['Change Month', 'Description']]\n",
-    "\n",
-    "# Display the resulting DataFrame with captured changes\n",
-    "print(\"Changes DataFrame:\")\n",
-    "print(final_changes_df)\n"
+    "# Display or further process changes_df\n",
+    "print(changes_df)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc228ded",
+   "id": "bb84824a",
    "metadata": {},
    "outputs": [],
    "source": []
